# taorobot-pi

./: .cline_patch_line_follow.py  .gitignore  CMakeLists.txt  README.md  build.sh  diff_check.txt  install_deps.sh  package.xml  sftp_config.example.json
docs/: arm_calibration_record.md  bringup_guide.md  cline_sftp_workflow.md  line_pick_sort_demo.md  line_pick_sort_stage2_test_plan.md  moveit_config_cleanup_notes.md  ros1_migration_plan.md  serial_link_protocol.md  serial_protocol_v2.md  system_interface_plan.md  task123_acceptance_checklist.md  task_runtime_test_plan.md  upstream_moveit_source_analysis.md  vision_handoff.md  vision_sorter_integration.md
include/: apriltag_detector.h  args.h  arm_kinematics.h  common.h  node_common.h  robot_serial.h  ros1_robot_control.h  ros_topics.h  vision.h
launch/: line_node.launch  mission_node.launch  object_node.launch
scripts/: pi_env.example.ps1  pi_exec.ps1  sync_to_pi.ps1  sync_to_targets.ps1  sync_to_vm.ps1  test_f407_v2_serial.py  vm_env.example.ps1  vm_exec.ps1
src/: .gitkeep  apriltag_detector.cpp  args.cpp  arm_kinematics.cpp  face_node.cpp  line_node.cpp  main.cpp  mission_node.cpp  object_node.cpp  robot_serial.cpp  ros1_line_node.cpp  ros1_mission_node.cpp  ros1_robot_control.cpp  serial_link_test.cpp  sorter_controller.cpp  vision.cpp
src/tao_bringup/: CMakeLists.txt  package.xml
src/tao_bringup/config/: joint_map.yaml  serial.yaml  task_poses.yaml
src/tao_bringup/launch/: moveit_real.launch  serial_test.launch
src/tao_serial/: CMakeLists.txt  package.xml
src/tao_serial/scripts/: serial_protocol.py  tao_moveit_bridge.py  tao_serial_node.py  test_f407_v2_serial.py
src/tao_tasks/: CMakeLists.txt  package.xml
src/tao_tasks/config/: arm_pose_tuner.yaml  control.yaml  route_plan.yaml  task_behavior.yaml  visual_servo.yaml
src/tao_tasks/launch/: arm_pose_tuner.launch  face_greeting_test.launch  line_follow_debug.launch  line_follow_test.launch  line_pick_sort_demo.launch
src/tao_tasks/scripts/: arm_pose_tuner.py  face_greeting_node.py  line_follow_controller.py  line_pick_sort_mission.py  visual_pick_place_controller.py
src/vision_sorter/: CMakeLists.txt  README.md
src/vision_sorter/config/: camera.yaml
src/vision_sorter/include/: face_detector.h  robot_control.h  ros_topics.h  sorter_controller.h
src/vision_sorter/launch/: face_node.launch
src/vision_sorter/src/: face_detector.cpp  ros1_face_node.cpp  ros1_object_node.cpp
src/yeahbot_c1/: CMakeLists.txt  package.xml
src/yeahbot_c1/config/: joint_names_yeahbot_c1.yaml  rviz.rviz
src/yeahbot_c1/launch/: display.launch  gazebo.launch
src/yeahbot_c1/meshes/: arm_0_link.STL  arm_1_link.STL  arm_2_link.STL  arm_3_link.STL  arm_4_link.STL  arm_5_1_link.STL  arm_5_2_link.STL  arm_5_3_link.STL  arm_5_4_link.STL  arm_5_5_link.STL  arm_5_6_link.STL  base_link.STL  camera_link.STL  screen_link.STL  wheel_lb_link.STL  wheel_lf_link.STL  wheel_rb_link.STL  wheel_rf_link.STL
src/yeahbot_c1/urdf/: yeahbot_c1.csv  yeahbot_c1.urdf
src/yeahbot_c1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/yeahbot_c1_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  yeahbot_c1.srdf
src/yeahbot_c1_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
