<?xml version="1.0"?>
<package format="2">
  <name>vision_sorter</name>
  <version>0.1.0</version>
  <description>Line, object, face and mission nodes for Tao robot vision tasks.</description>

  <maintainer email="user@example.com">vision_sorter</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
