<?xml version="1.0"?>
<package format="2">
  <name>tao_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for Tao robot bringup.</description>

  <maintainer email="todo@example.com">tao robot team</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>tao_serial</exec_depend>

  <export/>
</package>