<?xml version="1.0"?>
<package format="2">
  <name>tao_serial</name>
  <version>0.1.0</version>
  <description>Serial bridge between ROS and the lower STM32 controller.</description>

  <maintainer email="todo@example.com">tao robot team</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export/>
</package>