<?xml version="1.0"?>
<package format="2">
  <name>tao_tasks</name>
  <version>0.1.0</version>
  <description>Task-level controllers for the Tao robot ROS1 stack.</description>

  <maintainer email="todo@example.com">tao robot team</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export/>
</package>